# sol-hackathon

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tailwind.config.js
prisma/: schema.prisma
programs/apec-lms/: Cargo.toml
programs/apec-lms/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/courses/: route.ts
src/app/api/courses/[id]/: route.ts
src/app/api/educator/profile/: route.ts
src/app/api/enroll/: route.ts
src/app/api/enrollment/complete/: route.ts
src/app/api/mint/certificate/: route.ts
src/app/api/quiz/reset/: route.ts
src/app/api/quiz/submit/: route.ts
src/app/api/student/courses/: route.ts
src/app/auth/role-selection/: page.tsx
src/app/courses/: page.tsx
src/app/dashboard/: page.tsx
src/app/dashboard/educator/: page.tsx
src/app/dashboard/student/: page.tsx
src/components/: CourseGrid.tsx  Dashboard.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  Hero.tsx  Providers.tsx  StatsSection.tsx  WalletAuth.tsx  WalletProvider.tsx
src/lib/: auth.ts  idl.ts  solana.ts
src/types/: index.ts  next-auth.d.ts
