[package]
name = "apec-lms"
version = "0.1.0"
description = "APEC Education Ecosystem LMS - Blockchain-based Learning Management System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "apec_lms"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"
